# LibLinSolve

./: .gitignore  AMG.h  AMGFactory.cpp  AMGFactory.h  CMakeLists.txt  Config.h.in  GitSHA.h.in  LICENSE  coefficients.h  controlData.h  create_build.sh  davenotes.txt  linearSolver.h  linearSolverContext.h  linearSolverContext.hpp  linearSolverTypes.h  meson.build  meson_options.txt  residual.h  schur.h
HYPRE/: ContextHYPRE.h  HYPRESolver.h
PETSc/: ContextPETSc.h  PETScSolver.h
Trilinos/: ContextTrilinos.h  TrilinosSolver.h
apps/solver/: LinearSolver.cpp  meson.build  problem.yaml
matrix/: CRSConnectivity.h  CRSMatrix.h  CRSMatrix.hpp  CRSNodeGraph.cpp  CRSNodeGraph.h  CRSNodeGraphSynchronizer.h  MyNgpVector.h
matrix/layout/: memoryLayout.h
matrix/operators/blockMatrix/: blockMatrixDeterminant.hpp  blockMatrixInvert.hpp  blockMatrixIsZero.hpp  blockMatrixOperators.h
matrix/operators/distributed/: CRSMatrixVector.h  CRSResidual.h
matrix/operators/scaling/: scaling.h
matrix/operators/schur/: schurCondense.h  schurLambdaRecovery.h
matrix/test/: testDiagonalMatrix.h  testMatrixFromFile.h  testPreconditionerMatrix.h  testSquareMatrix.h
python/: coeff_info.py
tests/LinearSolver/: LinearSolver.cpp  create_build.sh  meson.build  problem.yaml
tests/LinearSolver/subprojects/: libLinSolve.wrap
tests/poc/kokkos_view_strides/: CMakeLists.txt  main.cpp  meson.build
utils/: Common.h  Profiler.h
