option('MPI',
  type: 'combo',
  choices: ['mpich', 'openmpi'],
  description: 'Choice of MPI implementation',
  yield: true
)

option('CONFIG',
  type: 'boolean',
  value: true,
  description: 'Generate Config.h header for library builds',
  yield: true
)

option('USE_PETSC',
  type: 'boolean',
  value: true,
  description: 'Use PETSc wrappers if dependency is found',
  yield: true
)

option('USE_HYPRE',
  type: 'boolean',
  value: true,
  description: 'Use HYPRE wrappers if dependency is found',
  yield: true
)
