option('MPI',
  type: 'combo',
  choices: ['mpich', 'openmpi'],
  description: 'Choice of MPI implementation',
  yield: true
)

option('CONFIG',
  type: 'boolean',
  value: true,
  description: 'Generate Config.h header for library builds',
  yield: true
)

option('USE_TRILINOS',
  type: 'boolean',
  value: false,
  description: 'Enable support for Trilinos Belos solver wrapper',
  yield: true
)
